# magma

./: Cargo.toml  README.md
magma-gfx/: Cargo.toml
src/: main.rs
