[package]
name = "magma"
version = "0.1.0"
authors = ["louisgjohnson <louisgjohnson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.18.0"
vulkano-win = "0.18.0"
vulkano-shaders = "0.18.0"
winit = "0.22.0"
glam = "0.9.3"
magma-gfx = { path = "./magma-gfx" }
rand = "0.7.3"

[workspace]
members = ["magma-gfx"]